# Project

./: CMakeLists.txt  DefaultConfig.ini  Doxyfile  README.md  main.cpp
config/: Config.cpp  Config.h  ConfigSectionStructure.h  ConfigStructure.h  GameConfig.cpp  GameConfig.h  IConfigStructureReader.h  INIConfigStructureReader.cpp  INIConfigStructureReader.h
frontend/: EventVisitor.cpp  EventVisitor.h  IEvent.cpp  IEvent.h  IFrontend.cpp  IFrontend.h  IFrontendEvents.cpp  IFrontendEvents.h  Input.cpp  Input.h  InputEvent.cpp  InputEvent.h  Key.h
frontend/terminal/: CharData.cpp  CharData.h  Color.h  ColorPair.cpp  ColorPair.h  CursesTerminalFrontend.cpp  CursesTerminalFrontend.h  IRenderSurfaceRead.cpp  IRenderSurfaceRead.h  IRenderSurfaceWrite.cpp  IRenderSurfaceWrite.h  ITerminalInput.cpp  ITerminalInput.h  ITerminalRenderer.cpp  ITerminalRenderer.h  RenderSurfaceBase.cpp  RenderSurfaceBase.h  RenderSurfaceRegion.cpp  RenderSurfaceRegion.h  RenderSurfaceRegionConst.cpp  RenderSurfaceRegionConst.h  TerminalEvents.cpp  TerminalEvents.h  TerminalResources.cpp  TerminalResources.h  TextureReader.cpp  TextureReader.h
game/: Game.cpp  Game.h  IScreen.cpp  IScreen.h
game/battle_screen/: BattleScreen.h
game/headquarters_screen/: HeadquartersScreen.h
game/main_menu_screen/: MainMenuScreen.h
game/message_screen/: MessageScreen.h
game/pre_battle_screen/: PreBattleScreen.h
game/squad_formation_screen/: SquadFormationScreen.h
game/squad_modification_screen/: SquadModificationScreen.h
game_view/: IViewFactory.cpp  IViewFactory.h
game_view/terminal/: TerminalViewFactory.h
headquarters_model/: HeadquartersModel.cpp  HeadquartersModel.h  Resources.cpp  Resources.h
headquarters_model/armory/: Armory.cpp  Armory.h  BuildResult.h
headquarters_model/tech/: ResearchResult.h  Tech.cpp  Tech.h  TechLevel.cpp  TechLevel.h
object_database/: ArmorInfo.cpp  ArmorInfo.h  ArmorTechInfo.cpp  ArmorTechInfo.h  ArmorTechType.cpp  ArmorTechType.h  ArmorType.h  UnitInfo.cpp  UnitInfo.h  UnitType.h  WeaponClassInfo.cpp  WeaponClassInfo.h  WeaponClassType.h  WeaponInfo.cpp  WeaponInfo.h  WeaponTechInfo.cpp  WeaponTechInfo.h  WeaponTechType.cpp  WeaponTechType.h  WeaponType.h
resources/terminal/textures/: drone_armor.texture  drone_machine_gun.texture  enemy_unit.texture  player_unit.texture  pointed_tile.texture  projectile.texture  soldier_armor.texture  soldier_machine_gun.texture  soldier_pistol.texture  soldier_shotgun.texture  soldier_sniper_rifle.texture  tile_asphalt.texture  tile_grass.texture  tile_wall_full.texture  tile_wall_half.texture  tile_wood.texture
tech/: Tech.cpp  Tech.h  TechLevel.cpp  TechLevel.h
unit/: BasicArmor.cpp  BasicArmor.h  BasicFirearmWeapon.cpp  BasicFirearmWeapon.h  BasicLaserWeapon.cpp  BasicLaserWeapon.h  IArmor.cpp  IArmor.h  IWeapon.cpp  IWeapon.h  Unit.cpp  Unit.h  UnitBuilder.h
unit/drone/: Drone.cpp  Drone.h  DroneBuilder.cpp  DroneBuilder.h
unit/drone/armor/: DroneStandardArmor.cpp  DroneStandardArmor.h  IDroneArmor.h  IDroneArmorFactory.h
unit/drone/armor/composite/: DroneCompositeArmor.cpp  DroneCompositeArmor.h  DroneCompositeArmorFactory.cpp  DroneCompositeArmorFactory.h
unit/drone/armor/standard/: DroneStandardArmor.cpp  DroneStandardArmor.h  DroneStandardArmorFactory.cpp  DroneStandardArmorFactory.h
unit/drone/weapon/: IDroneMachineGun.cpp  IDroneMachineGun.h  IDroneWeapon.h  IDroneWeaponFactory.cpp  IDroneWeaponFactory.h
unit/drone/weapon/firearm/: DroneFirearmMachineGun.cpp  DroneFirearmMachineGun.h  DroneFirearmWeaponFactory.cpp  DroneFirearmWeaponFactory.h
unit/drone/weapon/laser/: DroneLaserMachineGun.cpp  DroneLaserMachineGun.h  DroneLaserWeaponFactory.cpp  DroneLaserWeaponFactory.h
unit/soldier/: Soldier.cpp  Soldier.h  SoldierBuilder.cpp  SoldierBuilder.h
unit/soldier/armor/: ISoldierArmor.h  ISoldierArmorFactory.h  SoldierCompositeArmor.cpp  SoldierCompositeArmor.h  SoldierStandardArmor.cpp  SoldierStandardArmor.h
unit/soldier/armor/composite/: SoldierCompositeArmor.cpp  SoldierCompositeArmor.h  SoldierCompositeArmorFactory.cpp  SoldierCompositeArmorFactory.h
unit/soldier/armor/standard/: SoldierStandardArmor.cpp  SoldierStandardArmor.h  SoldierStandardArmorFactory.cpp  SoldierStandardArmorFactory.h
unit/soldier/weapon/: ISoldierMachineGun.cpp  ISoldierMachineGun.h  ISoldierPistol.cpp  ISoldierPistol.h  ISoldierShotgun.cpp  ISoldierShotgun.h  ISoldierSniperRifle.cpp  ISoldierSniperRifle.h  ISoldierWeapon.h  ISoldierWeaponFactory.cpp  ISoldierWeaponFactory.h
unit/soldier/weapon/firearm/: SoldierFirearmMachineGun.cpp  SoldierFirearmMachineGun.h  SoldierFirearmPistol.cpp  SoldierFirearmPistol.h  SoldierFirearmShotgun.cpp  SoldierFirearmShotgun.h  SoldierFirearmSniperRifle.cpp  (+3 more)
util/: Math.h  Rectangle.h  Vector.h
widget/: GridContainerWidget.h  SelectionBoxWidget.h  SelectionListWidget.h  SelectionWidget.h  TextWidget.h  Widget.h  WidgetSystem.h
widget/game/: DroneEquipmentWidget.h  SoldierEquipmentWidget.h  WorldViewWidget.h
widget/terminal/: GridContainerWidget.cpp  SelectionBoxWidget.cpp  SelectionListWidget.cpp  TerminalContext.cpp  TerminalContext.h  TextWidget.cpp  WorldRenderer.cpp  WorldRenderer.h
widget/terminal/game/: DroneEquipmentWidget.cpp  SoldierEquipmentWidget.cpp  WorldViewWidget.cpp
world/: FloorMaterial.cpp  FloorMaterial.h  FloorMaterialType.h  InstantiatedTiles.cpp  InstantiatedTiles.h  Tile.cpp  Tile.h  TileID.h  Wall.cpp  Wall.h  WallForm.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h  WorldMap.cpp  WorldMap.h
world/entities/: Projectile.cpp  Projectile.h  WorldEntities.cpp  WorldEntities.h
world/map/: FloorMaterial.cpp  FloorMaterial.h  FloorMaterialType.h  InstantiatedTiles.cpp  InstantiatedTiles.h  Tile.cpp  Tile.h  TileID.h  Wall.cpp  Wall.h  WallForm.h  WorldMap.cpp  WorldMap.h  WorldMovementMap.cpp  WorldMovementMap.h  WorldVisibilityMap.cpp  WorldVisibilityMap.h
world/script/: IWorldScript.cpp  IWorldScript.h  ProjectileScript.cpp  ProjectileScript.h  ScriptSequence.cpp  ScriptSequence.h  UnitMovingScript.cpp  UnitMovingScript.h
(+10 files in other folders)
